--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="styles/styles.css">
     <script src="scripts/main.js" defer></script>
 </head>
-<body class="bg-image">
-    <img src="./resources/bg-overlay.png" class="overlay-img" alt="overlay" >
+<body>
     <main>
-        <section id=""></section>
+        <section id="header">
+        </section>
     </main>
 </body>
 </html>
