--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="./styles/body.css">
+    <link rel="stylesheet" href="./styles/tabai.css">
     <script src="scripts/main.js" defer></script>
 </head>
 <body>
@@ -23,6 +24,14 @@
                     <p>INNOVATION THAT WILL SHAPE HOW WE <span>CONNECT</span> IN THE WORLD AN <span>OPPORTUNITY</span> FOR EVERYBODY.</p>
                     <hr class="horizontal-line-2">
                 <div class="vertical-line"></div>
+            </div>
+        </section>
+        <section id="TabSection">
+            <div class="buttons">
+                <input type="button" class="tabai" value="INTRO">
+                <input type="button" class="tabai" value="WORK">
+                <input type="button" class="tabai" value="ABOUT">
+                <input type="button" class="tabai" value="INTRO">
             </div>
         </section>
     </main>
