module is working

--- a/index.html
+++ b/index.html
@@ -26,14 +26,55 @@
                 <div class="vertical-line"></div>
             </div>
         </section>
-        <section id="TabSection">
-            <div class="buttons">
-                <input type="button" class="tabai" value="INTRO">
-                <input type="button" class="tabai" value="WORK">
-                <input type="button" class="tabai" value="ABOUT">
-                <input type="button" class="tabai" value="INTRO">
-            </div>
+        <section id="buttonai">
+            <!-- Mygtukas atidaryti modalą -->
+            <button id="myBtn">INTRO</button>
+            <button id="workBtn">WORK</button>
+            <button id="aboutBtn">ABOUT</button>
+            <button id="contactBtn">CONTACT</button>
         </section>
+            <!-- Modal -->
+            <div id="myModal" class="modal">
+                <div class="modal-content">
+                    <span class="mybtnClose">&times;</span>
+                    <h2>INTRO</h2>
+                    <hr class="hr_modal">
+                    <iframe src="./resources/tab-1.mp4" frameborder="0" ></iframe>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quisquam debitis ex mollitia doloremque et eaque odit molestias quas ut, quidem perspiciatis aliquid assumenda doloribus id modi minus distinctio illo magnam! Possimus eum sequi dolores officiis nam non odio qui voluptates ad totam, porro aliquid corporis tempora quaerat, velit architecto!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti reprehenderit doloremque iste aut labore perferendis placeat ab nulla praesentium explicabo!</p>
+                </div>
+            </div>
+            <div id="workModal" class="modal">
+                <div class="modal-content">
+                    <span class="workbtnClose">&times;</span>
+                    <h2>WORK</h2>
+                    <hr class="hr_modal">
+                    <img src="./resources/tab-2.jpg" alt="tab2">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quisquam debitis ex mollitia doloremque et eaque odit molestias quas ut, quidem perspiciatis aliquid assumenda doloribus id modi minus distinctio illo magnam! Possimus eum sequi dolores officiis nam non odio qui voluptates ad totam, porro aliquid corporis tempora quaerat, velit architecto!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti reprehenderit doloremque iste aut labore perferendis placeat ab nulla praesentium explicabo!</p>
+                </div>
+            </div>
+            <div id="aboutModal" class="modal">
+                <div class="modal-content">
+                    <span class="aboutbtnClose">&times;</span>
+                    <h2>ABOUT</h2>
+                    <hr class="hr_modal">
+                    <img src="./resources/tab-3.jpg" alt="tab3">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quisquam debitis ex mollitia doloremque et eaque odit molestias quas ut, quidem perspiciatis aliquid assumenda doloribus id modi minus distinctio illo magnam! Possimus eum sequi dolores officiis nam non odio qui voluptates ad totam, porro aliquid corporis tempora quaerat, velit architecto!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti reprehenderit doloremque iste aut labore perferendis placeat ab nulla praesentium explicabo!</p>
+                </div>
+            </div>
+            <div id="contactModal" class="modal">
+                <div class="modal-content">
+                    <span class="contactbtnClose">&times;</span>
+                    <h2>CONTACT</h2>
+                    <hr class="hr_modal">
+                    <img src="./resources/tab-4.jpg" alt="tab4">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quisquam debitis ex mollitia doloremque et eaque odit molestias quas ut, quidem perspiciatis aliquid assumenda doloribus id modi minus distinctio illo magnam! Possimus eum sequi dolores officiis nam non odio qui voluptates ad totam, porro aliquid corporis tempora quaerat, velit architecto!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti reprehenderit doloremque iste aut labore perferendis placeat ab nulla praesentium explicabo!</p>
+                </div>
+            </div>
+       
     </main>
 </body>
 </html>
