--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="scripts/main.js" defer></script>
 </head>
 <body>
+    <div id="wrapper">
     <main>
         <section id="header">
             <div class="logo">
@@ -76,5 +77,6 @@
             </div>
        
     </main>
+    </div>
 </body>
 </html>
